# live-bootcamp-project

./: compose.yml
.github/workflows/: prod.yml
app-service/: Cargo.toml
app-service/assets/: app.js
app-service/src/: main.rs
app-service/templates/: index.html
auth-service/: Cargo.toml  Dockerfile
auth-service/assets/: index.html
auth-service/src/: app_state.rs  domain.rs  lib.rs  main.rs  services.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  password.rs  user.rs
auth-service/src/domain/email/: tests.rs
auth-service/src/domain/password/: tests.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_mail_client.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/services/data_stores/hashmap_two_fa_code_store/: tests.rs
auth-service/src/services/data_stores/hashset_banned_token_store/: tests.rs
auth-service/src/services/hashmap_two_fa_code_store/: tests.rs
auth-service/src/services/hashmap_user_store/: tests.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/src/utils/auth/: tests.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
nginx/: nginx.conf
