[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
rand = "0.9.2"

[dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "cookies",
] }
