[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
async-trait = "0.1.89"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
rand = "0.9.2"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.32.5", features = ["tokio-comp"] }
logfire = "0.8.2"
tracing = "0.1.41"
opentelemetry = "0.30.0"
axum-tracing-opentelemetry = { version = "0.30.0", features = [
    "tracing_level_info",
] }
axum-otel-metrics = "0.12.0"
thiserror = "2.0.16"
color-eyre = "0.6.5"
tracing-subscriber = { version = "0.3.20", features = [
    "registry",
    "env-filter",
] }
tracing-error = "0.2.0"

[dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "cookies",
] }
